Style audio element

--- a/index.html
+++ b/index.html
@@ -172,28 +172,28 @@
             </div>
             <div class="portfolio-grid-element">
                 <p>
-                    <audio src="assets/audio/audio_1.mp3" type="audio/mpeg" controls muted>
+                    <audio src="assets/audio/audio_1.mp3" controls loop>
                         Your browser doesn't support HTML5 audio.
                         <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
                             video.</a>
                     </audio>
                 </p>
                 <p>
-                    <audio src="assets/audio/audio_2.mp3" type="audio/mpeg" controls muted>
+                    <audio src="assets/audio/audio_2.mp3" controls loop>
                         Your browser doesn't support HTML5 audio.
                         <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
                             video.</a>
                     </audio>
                 </p>
                 <p>
-                    <audio src="assets/audio/audio_3.mp3" type="audio/mpeg" controls muted>
+                    <audio src="assets/audio/audio_3.mp3" controls loop>
                         Your browser doesn't support HTML5 audio.
                         <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
                             video.</a>
                     </audio>
                 </p>
                 <p>
-                    <audio src="assets/audio/audio_4.mp3" type="audio/mpeg" controls muted>
+                    <audio src="assets/audio/audio_4.mp3" controls loop>
                         Your browser doesn't support HTML5 audio.
                         <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
                             video.</a>
