Change heading structure in all sections

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </section>
     <section id="about-us">
-        <h1>This is Creative Dreams <i class="fa-solid fa-people-group"></i></h1>
+        <h2>This is Creative Dreams <i class="fa-solid fa-people-group"></i></h2>
         <div class="about-us-grid">
             <div class="about-us-grid-element">
                 <p>Welcome to Creative Dreams! We make your dreams come true! At least within the areas of recording,
@@ -55,10 +55,10 @@
         </div>
     </section>
     <section id="our-services">
-        <h1>This is what we do <i class="fa-solid fa-lightbulb"></i></h1>
+        <h2>This is what we do <i class="fa-solid fa-lightbulb"></i></h2>
         <div class="our-services-grid">
             <div class="our-services-grid-element">
-                <h2>Recording <i class="fa-solid fa-record-vinyl"></i></h2>
+                <h3>Recording <i class="fa-solid fa-record-vinyl"></i></h3>
                 <p>Today almost everyone can record music and sounds in their own home. We encourage you to do that but
                     if you want to step up the game our great sounding studios offer the most advanced digital sound
                     software and the best within classic analogue equipment. When you do your recordings at Creative
@@ -66,7 +66,7 @@
                 </p>
             </div>
             <div class="our-services-grid-element">
-                <h2>Mixing <i class="fa-solid fa-sliders"></i></h2>
+                <h3>Mixing <i class="fa-solid fa-sliders"></i></h3>
                 <p>The art of mixing is about blending all the recorded individual tracks to create the best possible
                     sounding version of the song. Today there are a lot of mixing software that can be used at home to
                     mix tracks but Creative Dreams can help you to put that little extra in the mix. With our experience
@@ -74,7 +74,7 @@
                 </p>
             </div>
             <div class="our-services-grid-element">
-                <h2>Mastering <i class="fa-solid fa-volume-high"></i></h2>
+                <h3>Mastering <i class="fa-solid fa-volume-high"></i></h3>
                 <p>To master a track you need to know both your art and science because it is a very complex process.
                     There are a lot of good mastering software for home use but to be honest, you often need
                     professionals by your side. We are those professionals and we have the skills to perfectly balance,
@@ -82,7 +82,7 @@
                 </p>
             </div>
             <div class="our-services-grid-element">
-                <h2>Brainstorming <i class="fa-solid fa-lightbulb"></i></h2>
+                <h3>Brainstorming <i class="fa-solid fa-lightbulb"></i></h3>
                 <p>One definition of brainstorming is <span>a group problem-solving technique that involves the
                         spontaneuous contribution of ideas from all members of the group</span>. Creative Dreams are
                     professionals within the area of brainstorming and we can conduct high quality brainstorming
@@ -92,7 +92,7 @@
         </div>
     </section>
     <section id="portfolio">
-        <h1>Portfolio <i class="fa-solid fa-folder-closed"></i></h1>
+        <h2>Portfolio <i class="fa-solid fa-folder-closed"></i></h2>
         <div class="portfolio-welcome">
             <div class="portfolio-welcome-element">
                 <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
@@ -132,7 +132,7 @@
                 </p>
             </div>
             <div class="portfolio-grid-element">
-                <h2 class="portfolio-title">Artist X Live Video <i class="fa-solid fa-file-video"></i></h2>
+                <h3 class="portfolio-title">Artist X Live Video <i class="fa-solid fa-file-video"></i></h3>
                 <p class="portfolio-media-description">
                     A portfolio is intended to showcase a collection of high-end
                     work. This is Creative Dreams portfolio
@@ -143,7 +143,7 @@
             </div>
 
             <div class="portfolio-grid-element">
-                <h2 class="portfolio-title">Artist Y Live Video <i class="fa-solid fa-file-video"></i></h2>
+                <h3 class="portfolio-title">Artist Y Live Video <i class="fa-solid fa-file-video"></i></h3>
                 <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end
                     work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
@@ -162,7 +162,7 @@
                 </p>
             </div>
             <div class="portfolio-grid-element">
-                <h2>Artist Z Audio <i class="fa-solid fa-file-audio"></i></h2>
+                <h3>Artist Z Audio <i class="fa-solid fa-file-audio"></i></h3>
                 <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end
                     work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
@@ -205,7 +205,7 @@
     </section>
    
     <section id="contact">
-        <h1>Contact Us <i class="fa-solid fa-address-card"></i></h1>
+        <h2>Contact Us <i class="fa-solid fa-address-card"></i></h2>
         
         <div class="contact-us-grid">
             <div class="contact-us-grid-element">
@@ -257,10 +257,11 @@
                     <p>123 45 Vindeln, Sweden</p>
                     <p>Phone: +46(0)123 45 67</p>
                 </p>
+                
                 <div id="social-media-bar">
                     <ul class="social-media-list">
                         <li>
-                            <a href="http:www.facebook.com" target="_blank" rel="noopener"
+                            <a href="http//:www.facebook.com" target="_blank" rel="noopener"
                                 aria-label="Visit our Facebook page (opens in a new tab)"><i
                                     class="fab fa-facebook"></i></a>
                         </li>
