Removed wrong type in the textarea element

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </label>
                     <input id="email" class="text-input" type="email" name="email_address" required>
                     <label for="other">Other:</label>
-                    <textarea id="other" class="text-input-other" type="text" rows="10"></textarea>
+                    <textarea id="other" class="text-input-other" rows="10"></textarea>
                     <label for="recording">Recording</label>
                     <input class="radio-input" type="radio" id="recording" name="regarding_topic" value="recording"
                         required>
