Add relevant text content to video and audio in portfolio section

--- a/index.html
+++ b/index.html
@@ -123,11 +123,8 @@
             <div class="portfolio-grid-element">
                 <h3 class="portfolio-title">Artist X Live Video <i class="fa-solid fa-file-video"></i></h3>
                 <p class="portfolio-media-description">
-                    A portfolio is intended to showcase a collection of high-end
-                    work. This is Creative Dreams portfolio
-                    and here you can find examples of what we have done in the past. We have worked within many
-                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
-                    convince you to lay your trust in us and so that we can do great things together!
+                    Artist X did their debut live show in 2017 and Creative Dreams were of course there to help them step up the game. We did all the backtrack mixes and made sure the sound suited the arena perfectly. 
+                    <span>'We felt so safe and comfortable on stage knowing that Creative Dreams had done fantastic backtrack versions of our songs. It was a success!'</span> Since Artist X debut live show Creative Dreams have delivered over 100 backtrack versions of their songs and we are very proud of being Artist X first choice of mixing partner. Contact us to start your cooperation with us! It will be worth it!
                 </p>
             </div>
             <div class="portfolio-grid-element">
@@ -147,11 +144,8 @@
 
             <div class="portfolio-grid-element">
                 <h3 class="portfolio-title">Artist Y Live Video <i class="fa-solid fa-file-video"></i></h3>
-                <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end
-                    work. This is Creative Dreams portfolio
-                    and here you can find examples of what we have done in the past. We have worked within many
-                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
-                    convince you to lay your trust in us and so that we can do great things together!
+                <p class="portfolio-media-description">
+                    Artist Y started their journey back in 1999 when they recorded their first EP at Creative Dreams. The EP included four songs where of two peaked at the Swedish charts during three months of 1999. Of course Creative Dreams wanted to continue the cooperation with Artist Y and during 2000 the journey continued. <span>'We where in need of a new sound and the brainstorming session with Creative Dreams was fantastic. Before we knew it we had recorded four new songs that sounded fresh and modern!'</span> We are so proud to be a part of Artist Y:s journey and we are still having regular brainstorming sessions to always be in the front edge of the music industry. Take the chance to have a brainstorming session with us to find your new sound!
                 </p>
             </div>
             <div class="portfolio-grid-element">
@@ -169,11 +163,8 @@
             </div>
             <div class="portfolio-grid-element">
                 <h3>Artist Z Audio <i class="fa-solid fa-file-audio"></i></h3>
-                <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end
-                    work. This is Creative Dreams portfolio
-                    and here you can find examples of what we have done in the past. We have worked within many
-                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
-                    convince you to lay your trust in us and so that we can do great things together!
+                <p class="portfolio-media-description">
+                    We don't think that there are so many out there that haven't heard about Artist Z. 2021 they took the world with a storm with their major dance hit Song Z. Creative Dreams were a big part in the sound and all recording, mixing and mastering was made during five cold winter days in the beginning of 2021. <span>'We are so glad that we had Creative Dreams in our team during the process of making the song. They gave us new angles and ideas that helped us step out from our comfort zone. And it was really nice to do the recording out in the woods in nowhere!'</span>
                 </p>
             </div>
             <div class="portfolio-grid-element">
