Add explaining comments in index.html for each section and area on the page and add credits for hero image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <!-- Header 'Navigation Area' -->
+    <!-- Header 'Navigation Area and Hero image' -->
     <header class="navigation-area">
         <a href="index.html" id="logo">
             <h1>Creative Dreams <i class="fa-solid fa-headphones"></i></h1>
@@ -27,7 +27,7 @@
             </ul>
         </nav>
 
-        <!-- Div 'Hero' -->
+        <!-- Div 'Hero image' - Photo by Jonathan Velasquez (from Unsplash - https://unsplash.com/photos/c1ZN57GfDB0') -->
         <div id="hero">
             <div id="hero-image">
                 <p id="quote-plate">
