Clean up code like grouping of elements and sections with same attributes and add further comments in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </nav>
 
         <!-- Div 'Hero image' - Photo by Jonathan Velasquez (from Unsplash - https://unsplash.com/photos/c1ZN57GfDB0') -->
-        <div id="hero">
-            <div id="hero-image">
+        <div class="hero">
+            <div class="hero-image">
                 <p id="quote-plate">
                     “A creative life is an amplified life. It's a bigger life, a happier life, an expanded life, and a
                     hell of a lot more interesting life” - Elizabeth Gilbert
