--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <div id="social-media-bar">
                         <ul class="social-media-list">
                             <li>
-                                <a href="http//:www.facebook.com" target="_blank" rel="noopener"
+                                <a href="http://www.facebook.com" target="_blank" rel="noopener"
                                     aria-label="Visit our Facebook page (opens in a new tab)"><i
                                         class="fab fa-facebook"></i></a>
                             </li>
