Change top navigation to sticky and changed all media querys to work properly with sticky top navigation

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <body>
 
     <!-- Header 'Navigation Area and Hero image' -->
-    <header class="navigation-area">
+    <div class="box-area">
+    <header>
+        <div class="wrapper">
         <a href="index.html" id="logo">
             <h1>Creative Dreams <i class="fa-solid fa-headphones"></i></h1>
         </a>
-        <nav class="navigation">
+        <nav>
             <ul class="top-navigation">
                 <li><a href="#about-us">About</a></li>
                 <li><a href="#our-services">Our Services</a></li>
@@ -26,7 +28,9 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-
+    </div>
+    </header>
+</div>
         <!-- Div 'Hero image' - Photo by Jonathan Velasquez (from Unsplash - https://unsplash.com/photos/c1ZN57GfDB0') -->
         <div class="hero">
             <div class="hero-image">
@@ -36,7 +40,7 @@
                 </p>
             </div>
         </div>
-    </header>
+ 
 
     <main>
 
