Add thankyou page to form submit and style add links to main page on thankyou page

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
                 <!-- Div 'Contact Form' -->
                 <div class="contact-us-grid-element">
-                    <form class="contact-form" method="POST" action="https://formdump.codeinstitute.net/">
+                    <form class="contact-form" method="GET" action="thankyou.html">
                         <label for="first-name">First Name: *
                         </label>
                         <input id="first-name" class="text-input" type="text" name="first_name" required>
