Convert hero image to webp

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6942.917595719306!2d19.702332305092682!3d64.21217938354455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467c0bbe0e3d8215%3A0x3a67db692154a748!2sVindeln%205%2C%20922%2091%20Vindeln!5e0!3m2!1ssv!2sse!4v1657876750495!5m2!1ssv!2sse"
                         width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        referrerpolicy="no-referrer-when-downgrade" title="Google Map"></iframe>
                 </div>
 
                 <!-- Div 'Contact Address' -->
