--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 <div class="portfolio-grid-element">
                     <p>
                         <!-- Video from www.shutterstock.com -->
-                        <video controls autoplay muted loop>
-                            <source src="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm" type="video/mp4">
+                        <video controls loop>
+                            <source src="./assets/videos/video_artist_x.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
                             <a
                                 href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm">Link
@@ -182,8 +182,8 @@
                 <div class="portfolio-grid-element">
                     <p>
                         <!-- Video from www.shutterstock.com -->
-                        <video controls autoplay muted loop>
-                            <source src="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm" type="video/mp4">
+                        <video controls loop>
+                            <source src="./assets/videos/video_artist_y.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
                             <a
                                 href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm">Link
