Change video to youtube videos to increase speed on site

--- a/index.html
+++ b/index.html
@@ -152,14 +152,7 @@
                 </div>
                 <div class="portfolio-grid-element">
                     <p>
-                        <!-- Video from www.shutterstock.com -->
-                        <video controls loop>
-                            <source src="./assets/videos/video_artist_x.mp4" type="video/mp4">
-                            Your browser doesn't support HTML5 video.
-                            <a
-                                href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm">Link
-                                to the
-                                video.</a>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/WnKnEC4ApC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </video>
                     </p>
                 </div>
@@ -181,15 +174,7 @@
                 </div>
                 <div class="portfolio-grid-element">
                     <p>
-                        <!-- Video from www.shutterstock.com -->
-                        <video controls loop>
-                            <source src="./assets/videos/video_artist_y.mp4" type="video/mp4">
-                            Your browser doesn't support HTML5 video.
-                            <a
-                                href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm">Link
-                                to the
-                                video.</a>
-                        </video>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/blPPFrVeyng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </p>
                 </div>
                 <div class="portfolio-grid-element">
