Change youtube embedding in portfolio section

--- a/index.html
+++ b/index.html
@@ -152,8 +152,11 @@
                 </div>
                 <div class="portfolio-grid-element">
                     <p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/WnKnEC4ApC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </video>
+       
+                            <object width="560" height="315"
+                            data="https://www.youtube.com/embed/WnKnEC4ApC0">
+                            </object>
+                        
                     </p>
                 </div>
 
@@ -174,7 +177,9 @@
                 </div>
                 <div class="portfolio-grid-element">
                     <p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/blPPFrVeyng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <object width="560" height="315"
+                        data="https://www.youtube.com/embed/blPPFrVeyng">
+                        </object>
                     </p>
                 </div>
                 <div class="portfolio-grid-element">
