Change video format to mp4 due to increase loading time

--- a/index.html
+++ b/index.html
@@ -153,9 +153,15 @@
                 <div class="portfolio-grid-element">
                     <p>
        
-                            <object width="560" height="315"
-                            data="https://www.youtube.com/embed/WnKnEC4ApC0">
-                            </object>
+                            <!-- Video from www.shutterstock.com -->
+                        <video controls autoplay muted loop>
+                            <source src="assets/videos/video_artist_x.mp4" type="video/mp4">
+                            Your browser doesn't support HTML5 video.
+                            <a
+                                href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm">Link
+                                to the
+                                video.</a>
+                        </video>
                         
                     </p>
                 </div>
@@ -177,9 +183,15 @@
                 </div>
                 <div class="portfolio-grid-element">
                     <p>
-                        <object width="560" height="315"
-                        data="https://www.youtube.com/embed/blPPFrVeyng">
-                        </object>
+                        <!-- Video from www.shutterstock.com -->
+                        <video controls autoplay muted loop>
+                            <source src="assets/videos/video_artist_y.mp4" type="video/mp4">
+                            Your browser doesn't support HTML5 video.
+                            <a
+                                href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm">Link
+                                to the
+                                video.</a>
+                        </video>
                     </p>
                 </div>
                 <div class="portfolio-grid-element">
