--- a/index.html
+++ b/index.html
@@ -343,16 +343,9 @@
 
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
-    <!-- <script src="assets/script/script.js"></script> -->
-
+    
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script type="text/javascript">
-        $(document).on('click', 'ul li', function () {
-
-            $(this).addClass('active').siblings().removeClass('active')
-
-        })
-    </script>
+    <script src="assets/script/script.js"></script>
 </body>
 
 </html>
