Add height and width to client logos in portfolio section

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                 <div class="portfolio-clients-element">
                     <ul id="clients">
                         <li>
-                            <img src="assets/images/client_a.png" alt="Logo of Client A"></li>
+                            <img src="assets/images/client_a.png" alt="Logo of Client A" height="100" width="100"></li>
                         <li>
-                            <img src="assets/images/client_b.png" alt="Logo of Client B"></li>
+                            <img src="assets/images/client_b.png" alt="Logo of Client B" height="100" width="100"></li>
                         <li>
-                            <img src="assets/images/client_c.png" alt="Logo of Client C"></li>
+                            <img src="assets/images/client_c.png" alt="Logo of Client C" height="100" width="100"></li>
                         <li>
-                            <img src="assets/images/client_d.png" alt="Logo of Client D"></li>
+                            <img src="assets/images/client_d.png" alt="Logo of Client D" height="100" width="100"></li>
                         <li>
                     </ul>
                 </div>
