Change header size in media queries

--- a/index.html
+++ b/index.html
@@ -343,8 +343,11 @@
 
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
-    
+
+     <!-- Jquery script -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+     
+    <!-- Script.js -->
     <script src="assets/script/script.js"></script>
 </body>
 
