--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
                 <!-- Div 'Contact Form' -->
                 <div class="contact-us-grid-element">
-                    <form class="contact-form" method="GET" action="thankyou.html">
+                    <form class="contact-form" method="GET" action="form-confirmation.html">
                         <label for="first-name">First Name: *
                         </label>
                         <input id="first-name" class="text-input" type="text" name="first_name" required>
