Remove faulty two div tags in form-confirmation

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <p>
 
                         <!-- Video from www.shutterstock.com -->
-                        <video controls autoplay muted loop>
+                        <video controls muted loop>
                             <source src="assets/videos/video_artist_x.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
                             <a
@@ -183,7 +183,7 @@
                 <div class="portfolio-grid-element">
                     <p>
                         <!-- Video from www.shutterstock.com -->
-                        <video controls autoplay muted loop>
+                        <video controls muted loop>
                             <source src="assets/videos/video_artist_y.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
                             <a
@@ -343,9 +343,9 @@
     <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
 
-     <!-- Jquery script -->
+    <!-- Jquery script -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-     
+
     <!-- Script.js -->
     <script src="assets/script/script.js"></script>
 </body>
