--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <source src="assets/videos/video_artist_x.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
                             <a
-                                href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm">Link
+                                href="https://ak.picdn.net/shutterstock/videos/1058308858/preview/stock-footage-rock-band-with-guitarists-and-drummer-performing-at-a-concert-in-a-night-club-front-row-crowd-is.webm" target="_blank" rel="noopener" aria-label="Link to Video clip for Artist X (opens in a new tab)">Link
                                 to the
                                 video.</a>
                         </video>
@@ -187,7 +187,7 @@
                             <source src="assets/videos/video_artist_y.mp4" type="video/mp4">
                             Your browser doesn't support HTML5 video.
                             <a
-                                href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm">Link
+                                href="https://ak.picdn.net/shutterstock/videos/1058126545/preview/stock-footage-four-man-rock-band-with-lead-singer-guitarists-bassist-and-drummer-performing-at-a-concert-in-a.webm" target="_blank" rel="noopener" aria-label="Link to Video clip for Artist Y (opens in a new tab)">Link
                                 to the
                                 video.</a>
                         </video>
@@ -210,25 +210,25 @@
                     <p>
                         <audio src="assets/audio/audio_1.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_1.mp3">Link to the audio.</a>
+                            <a href="assets/audio/audio_1.mp3" target="_blank" aria-label="Link to Audio clip 1 for Artist Z (opens in a new tab)">Link to Audio clip 1.</a>
                         </audio>
                     </p>
                     <p>
                         <audio src="assets/audio/audio_2.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_2.mp3">Link to the audio.</a>
+                            <a href="assets/audio/audio_2.mp3" target="_blank" aria-label="Link to Audio clip 2 for Artist Z (opens in a new tab)">Link to Audio clip 2.</a>
                         </audio>
                     </p>
                     <p>
                         <audio src="assets/audio/audio_3.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_3.mp3">Link to the audio.</a>
+                            <a href="assets/audio/audio_3.mp3" target="_blank" aria-label="Link to Audio clip 3 for Artist Z (opens in a new tab)">Link to Audio clip 3.</a>
                         </audio>
                     </p>
                     <p>
                         <audio src="assets/audio/audio_4.mp3" controls loop>
                             Your browser doesn't support HTML5 audio.
-                            <a href="assets/audio/audio_4.mp3">Link to the audio.</a>
+                            <a href="assets/audio/audio_4.mp3" target="_blank" aria-label="Link to Audio clip 4 for Artist Z (opens in a new tab)">Link to Audio clip 4.</a>
                         </audio>
                     </p>
                 </div>
