--- a/form-confirmation.html
+++ b/form-confirmation.html
@@ -32,7 +32,7 @@
         <div class="hero">
             <div class="hero-image">
                 <p id="quote-plate">
-                    Thank you! We have receieved your message and will get back to you as soon as possible! To get back to the main page <a href="index.html" id="link-form" aria-label="Link back to mainpage (opens within the same tab)">Click here</a> 
+                    Thank you! We have receieved your message and will get back to you as soon as possible! <a href="index.html" id="link-form" aria-label="Link back to main page (opens within the same tab)">Click here to get back to the main page!</a> 
                 </p>
             </div>
         </div>
